@startuml

package "RDB (MySQL) - Persistent Master" <<Database>> {
  
  entity "rehearsal_session" as session {
    * session_id : VARCHAR(36) <<PK>>
    --
    * situation_type : VARCHAR(50)
    * status : VARCHAR(50)
    selected_outfit_id : VARCHAR(100)
    video_url : VARCHAR(500)
    download_url : VARCHAR(500)
    ticket_summary : TEXT
    * created_at : DATETIME
    * updated_at : DATETIME
  }

  entity "session_context_slot" as context_slot {
    * id : BIGINT <<PK>>
    --
    * session_id : VARCHAR(36) <<FK>>
    * slot_key : VARCHAR(50)
    slot_value : VARCHAR(255) <<NULLable>>
    * created_at : DATETIME
    * updated_at : DATETIME
  }
  
  note left of context_slot
    [Partial 판단 로직]
    특정 session_id에 대해 
    slot_value가 NULL인 Row가 존재하면 Partial.
    모두 채워져 있으면 Final 확정.
    (더 이상 Redis에 Context를 통째로 올리지 않음)
  end note

  entity "simulation_turn" as turn {
    * id : BIGINT <<PK>>
    --
    * session_id : VARCHAR(36) <<FK>>
    * turn_no : INT
    * opponent_line : TEXT
    * user_transcript : TEXT
    * is_success : BOOLEAN
    feedback : TEXT
    is_fallback : BOOLEAN
    * created_at : DATETIME
  }

  session ||--o{ context_slot : "생성 시 필수 슬롯 개수만큼 NULL로 INSERT\n이후 AI가 UPDATE"
  session ||--o{ turn : "턴이 종료/확정될 때마다 대화 및 피드백 INSERT"
}

package "Redis - Lean Active Cache (Online Scale)" <<Node>> {
  
  map "ClientSession (Lean Cache Entity)" as redis_session {
    sessionId => VARCHAR(36)
    situationType => Enum
    status => Enum (전체 플로우 상태)
    contextStatus => Enum (EXTRACTING, MERGING 등)
    followUpAttempt => INT (재질문 시도 횟수 카운터)
    currentTurn => INT (현재 시뮬레이션 턴 카운터)
    currentOpponentLine => TEXT (스트리밍/폴링용 임시 대사)
  }
  
  note right of redis_session
    [다이어트 완료된 세션 (온라인 폴링 방어용)]
    - RDB로 즉시 유추할 수 있는 값(missingSlotKeys 등) 삭제
    - 영구 보존용 데이터(context, history 등) 전면 RDB 위임
    - 오직 DB Hit을 방어하기 위한 상태값과
      빈번하게 변경되는 카운터, 임시 텍스트만 유지
  end note

}

' 관계선 (Redis의 sessionId가 RDB의 PK를 참조함을 명시)
redis_session::sessionId -.up.-> session::session_id : "Sync (최종 확정 시 DB 트랜잭션 성공 후 Redis 업데이트)"

@enduml
